# python-template

./: .cookiecutterignore  README.md  cookiecutter.json
scripts/: version_checker.py
{{ cookiecutter.project_slug }}/: .gitignore  CHANGELOG.md  CHANGLOG.md  README.md  noxfile.py  pyproject.toml
{{ cookiecutter.project_slug }}/.github/: pull_request_template.md
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
{{ cookiecutter.project_slug }}/.github/linters/: .codespellrc  .flake8
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yaml  ci.yml
{{ cookiecutter.project_slug }}/docs/_templates/: navbar-logo.html  navbar_logo.html
{{ cookiecutter.project_slug }}/docs/source/: conf.py  index.rst
{{ cookiecutter.project_slug }}/docs/source/_static/: custom.css  custom.js
{{ cookiecutter.project_slug }}/docs/source/development/: index.rst
{{ cookiecutter.project_slug }}/docs/source/examples/: index.rst
{{ cookiecutter.project_slug }}/docs/source/user_guide/: index.rst
{{ cookiecutter.project_slug }}/scripts/: version_checker.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test_version.py
