[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package_name }}"
readme = "README.md"
dynamic = ["version"]
# description = ""
# keywords = []
requires-python = ">=3.9,<3.14"
# license = "BSD-3-Clause"
# license-files = ["LICENSE"]
authors = [
    { name = "{{ cookiecutter.author_name }}" },
    { email = "{{  cookiecutter.author_email }}" },
]
maintainers = [
    { name = "{{ cookiecutter.author_name }}" },
    { email = "{{ cookiecutter.author_email }}" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
]

[tool.setuptools.dynamic]
version = {attr = "{{ cookecutter.package_name }}.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-favicon",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "nox",
    "flake8",
    "autopep8",
    "codespell",
    "genbadge[all]",
    "{{ cookiecutter.package_name }}[docs,tests]",
]

[project.urls]
Homepage = "https://github.com/NREL/{{ cookiecutter.project_slug }}"
# Documentation = ""
Repository = "https://github.com/NREL/{{ cookiecutter.project_slug }}"
Issues = "https://github.com/NREL/{{ cookiecutter.project_slug }}/issues"