[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
#     for more information on fields/options.

[project]
name = "{{ cookiecutter.package_name }}"
readme = "README.md"
dynamic = ["version"]
# description = ""
# keywords = []
requires-python = ">=3.9,<3.14"  # Should update if after Oct 2025
# license = ""
# license-files = [""]
authors = [
    { name = "{{ cookiecutter.author_name }}" },
    { email = "{{  cookiecutter.author_email }}" },
]
maintainers = [
    { name = "{{ cookiecutter.author_name }}" },
    { email = "{{ cookiecutter.author_email }}" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.package_name }}.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.csv", "*.css"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-favicon",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "nox",
    "flake8",
    "autopep8",
    "codespell",
    "genbadge[all]",
    "{{ cookiecutter.package_name }}[docs,tests]",
]

# [project.urls]
# Homepage = ""
# Documentation = ""
# Repository = ""
# Issues = ""
