[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
#     for more information on fields/options.

[project]
name = "{{ cookiecutter.package_name }}"
readme = "README.md"
dynamic = ["version"]
# description = "..."
# keywords = ["...", "..."]
requires-python = ">=3.10,<3.15"  # Change if after Oct. 2026
# license = "..."
# license-files = ["LICENSE"]
authors = [
    { name = "{{ cookiecutter.author_name }}" },
    { email = "{{  cookiecutter.author_email }}" },
]
maintainers = [
    { name = "{{ cookiecutter.author_name }}" },
    { email = "{{ cookiecutter.author_email }}" },
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.package_name }}.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.csv", "*.css"]

[tool.ruff]
line-length = 80
exclude = ["build", "docs", "images", "reports"]

[tool.ruff.lint]
preview = true
select = [
    "E",  # All pycodestyle errors
    "W",  # All pycodestyle warnings
    "F",  # All pyflakes errors
    "B",  # All flake8-bugbear checks
    "D",  # All pydocstyle checks
]
extend-select = [
    "E302", "E305",  # Expected blank lines (requires preview=true, above)
]
ignore = [
    "B007", "B009", "B010", "B028", "B905",
    "D1", "D203", "D205", "D212", "D400", "D401", "D415",
    "E201", "E202", "E226", "E241", "E731",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-favicon",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-xdist",
]
dev = [
    "nox",
    "ruff",
    "codespell",
    "genbadge[all]",
    "{{ cookiecutter.package_name }}[docs,tests]",
]

# [project.urls]
# Homepage = "https://..."
# Documentation = "https://..."
# Repository = "https://..."
# Issues = "https://..."
